[package]
name = "merlin-tooling"
version.workspace = true
edition.workspace = true

[dev-dependencies]
tempfile.workspace = true

[dependencies]
async-trait.workspace = true
boa_engine.workspace = true
futures.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_codegen.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_transforms_base.workspace = true
swc_ecma_transforms_typescript.workspace = true
swc_ecma_visit.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true

