[package]
name = "merlin-tooling"
version.workspace = true
edition.workspace = true

[dependencies]
merlin-deps.workspace = true
async-trait.workspace = true
boa_engine.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-futures.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true

