[package]
name = "merlin-tools"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
rquickjs.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

