[package]
name = "merlin-benchmarks-criterion"
version.workspace = true
edition.workspace = true

[dependencies]
merlin-agent.workspace = true
merlin-context.workspace = true
merlin-core.workspace = true
merlin-deps.workspace = true
merlin-local.workspace = true
merlin-providers.workspace = true
merlin-routing.workspace = true
merlin-tooling.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "routing_benchmarks"
harness = false

[[bench]]
name = "integration_benchmarks"
harness = false

[lints]
workspace = true
