[package]
name = "merlin-benchmarks-gungraun"
version.workspace = true
edition.workspace = true

[dependencies]
merlin-agent.workspace = true
merlin-context.workspace = true
merlin-core.workspace = true
merlin-languages.workspace = true
merlin-routing.workspace = true
merlin-providers.workspace = true
merlin-local.workspace = true
anyhow.workspace = true
tokio.workspace = true

[dev-dependencies]
gungraun = "0.17"

[[bench]]
name = "gungraun_integration"
harness = false

[[bench]]
name = "gungraun_routing"
harness = false

[lints]
workspace = true
