[package]
name = "merlin-benchmarks-gungraun"
version.workspace = true
edition.workspace = true

[dependencies]
merlin-agent.workspace = true
merlin-context.workspace = true
merlin-core.workspace = true
merlin-deps.workspace = true
merlin-languages.workspace = true
merlin-local.workspace = true
merlin-providers.workspace = true
merlin-routing.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
divan = "0.1"
mimalloc = "0.1"

[[bench]]
name = "gungraun_executor"
harness = false

[lints]
workspace = true
