[package]
name = "merlin-benchmarks-quality"
version.workspace = true
edition.workspace = true

[[bin]]
name = "quality-bench"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
merlin-context.workspace = true
merlin-core.workspace = true
merlin-languages.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true

[lints]
workspace = true
