[package]
name = "rust-backend"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
merlin-core.workspace = true
anyhow.workspace = true
ra_ap_ide.workspace = true
ra_ap_ide_db.workspace = true
ra_ap_load-cargo.workspace = true
ra_ap_project_model.workspace = true
ra_ap_syntax.workspace = true
ra_ap_vfs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

